--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = networking-netronome
-version = 2017.06
+version = 2017.07
 summary = Neutron ML2 and OS-VIF plugin for Agilio OVS
 description-file =
     README.rst
@@ -51,5 +51,7 @@ output_file = networking_netronome/plugins/ml2/drivers/agilio_ovs/locale/agilio_
 [entry_points]
 neutron.ml2.mechanism_drivers =
     agilio_ovs = networking_netronome.plugins.ml2.drivers.agilio_ovs.mech_driver.mech_agilio_ovs:AgilioOvsMechanismDriver
+oslo.config.opts =
+    neutron.ml2.agilio_ovs.agent = networking_netronome.plugins.ml2.drivers.agilio_ovs_conf:list_agilio_ovs_opts
 os_vif =
     agilio_ovs = vif_plug_agilio_ovs.agilio_ovs:AgilioOvsPlugin
