--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ setenv =
    VIRTUAL_ENV={envdir}
    PYTHONWARNINGS=default::DeprecationWarning
 deps = -r{toxinidir}/test-requirements.txt
+       git+https://git.openstack.org/openstack/neutron.git@11.0.0.0b3
 commands = python setup.py test --slowest --testr-args='{posargs}'
 
 [testenv:pep8]
